crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_operator_arrow.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: a -> b
---
OperatorReserved(
    Arrow,
    1,
    3,
)
