crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_operator_caret.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: a ^ b
---
OperatorReserved(
    Caret,
    1,
    3,
)
