crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_operator_double_colon.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "a :: b"
---
OperatorReserved(
    DoubleColon,
    1,
    3,
)
