crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_operator_plus_plus.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: a ++ b
---
OperatorReserved(
    PlusPlus,
    1,
    3,
)
