crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_operator_right_bad_operand_propagates.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "a + \"x"
---
String(
    Endless,
    1,
    7,
)
