crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_pin_outside_query.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: ^x
---
PinOutsideQuery(
    1,
    1,
)
